新增孔洞矩形

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
 <body>
     <div class="menu">
         <div>
-            <h3>WebGL2 Samples</h3>
+            <h3>TianWebGPU Samples</h3>
             <hr>
             <div id="webgl2samplediv">
-                <a class="sample" target="001hello-triangle-study">001hello-triangle-study</a>
+                <a class="sample" target="001hello-triangle">001hello-triangle</a>
+                <a class="sample" target="002hello-rectangle">002hello-rectangle</a>
+                <a class="sample" target="003hello-rectangle-with-hole">003hello-rectangle-with-hole</a>
+                
             </div>
         </div>
     </div>
