--- a/samples/002hello-rectangle/002hello-rectangle.html
+++ b/samples/002hello-rectangle/002hello-rectangle.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: tianyw
  * @Date: 2022-11-11 12:50:23
- * @LastEditTime: 2023-04-09 09:14:48
+ * @LastEditTime: 2023-04-09 15:57:58
  * @LastEditors: tianyw
 -->
 <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hello-triangle-study</title>
+    <title>002hello-rectangle</title>
     <style>
         html,
         body {
@@ -35,10 +35,10 @@
 </head>
 
 <body>
-    <div id="hello-triangle-study">
+    <div id="002hello-rectangle">
         <canvas id="gpucanvas"></canvas>
     </div>
-    <script type="module" src="./hello-triangle-study.ts"></script>
+    <script type="module" src="./002hello-rectangle.ts"></script>
 
 </body>
 
