新增 rotating-cube 及注释

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <a class="sample" target="001hello-triangle">001hello-triangle</a>
                 <a class="sample" target="002hello-rectangle">002hello-rectangle</a>
                 <a class="sample" target="003hello-rectangle-with-hole">003hello-rectangle-with-hole</a>
+                <a class="sample" target="004rotating-cube">004rotating-cube</a>
                 
             </div>
         </div>
